Fix accessibility issues: add main landmark and improve contrast

--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@ a {
 .headline {
   font-size: 80px;
   font-weight: lighter;
-  color: #8d0801;
+  color: #ece7e7;
   text-align: right;
   margin: 50px;
   padding: 20px;
